--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,7 @@
 
   --black: #000;
   --gray: #757575;
+  --white: #fff;
 
   --line-height--xs: 1;
   --line-height--sm: 1.25;
@@ -154,12 +155,13 @@ h4 {
 .split-row-d__description {
   grid-column: span 12;
   order: 2;
-  border-left: solid 1px var(--black);
   justify-items: center;
 }
 
 .split-row-d__description p {
   width: 69%;
+  position: relative;
+  top: -6px;
 }
 
 .split-row-e>* {
@@ -210,6 +212,27 @@ h4 {
   font-size: clamp(1rem, 0.063rem + 1.04vw, 1.188rem);
 }
 
+.split-row-h {
+  height: 29rem;
+  background-color: #0D0D0D;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+}
+
+.split-row-h__titlestack {
+  display: flex;
+  flex-direction: column;
+  row-gap: .75rem;
+  grid-column: 2 / span 22;
+  color: var(--white);
+  z-index: 1;
+}
+
+.split-row-h__titlestack p {
+  line-height: var(--line-height--md);
+}
+
 .stack {
   display: grid;
   grid-template-rows: repeat(8, 1fr);
@@ -228,4 +251,162 @@ h4 {
 
 .divider {
   border-bottom: solid 1px var(--black);
+}
+
+/* Large Screen - - - - - - - - - - - - - - - - - - - - - */
+
+@media (min-width:800px) {
+  .split-row-d__description {
+    border-left: solid 1px var(--black);
+  }
+
+  .split-row-h img {
+    position: absolute;
+    width: 46vw;
+    min-width: 40rem;
+    bottom: 0;
+    right: 2rem;
+  }
+
+}
+
+/* Small Screen - - - - - - - - - - - - - - - - - - - - - */
+
+@media (max-width:799px) {
+  .verticalheading--loud {
+    font-size: 8vw;
+  }
+
+  .split-row-a {
+    padding: 0 3rem;
+    gap: 1.5rem 0;
+  }
+
+  .split-row-a__titlestack,
+  .split-row-a__description {
+    grid-column: span 24;
+  }
+
+  .split-row-b {
+    grid-template-rows: auto auto;
+    gap: 1rem 0;
+  }
+
+  .split-row-b__title {
+    grid-area: 1 / 1 / 3 / 3;
+  }
+
+  .split-row-b__description {
+    grid-area: 1 / 3 / 2 / 25;
+    position: relative;
+    top: -6px;
+  }
+
+  .split-row-b__annotation {
+    grid-area: 2 / 3 / 3 / 25;
+  }
+
+  .split-row-d {
+    grid-template-rows: auto auto;
+  }
+
+  .split-row-d>* {
+    padding: 3rem 0;
+  }
+
+  .split-row-d__title {
+    grid-area: 1 / 23 / 3 / 25;
+  }
+
+  .split-row-d__image {
+    grid-area: 1 / 1 / 2 / 23;
+  }
+
+  .split-row-d__image img {
+    width: calc(100% - 2rem);
+    height: 60vh;
+    object-fit: cover;
+  }
+
+  .split-row-d__description {
+    grid-area: 2 / 1 / 3 / 23;
+    border-top: solid 1px var(--black);
+  }
+
+  .split-row-d__description p {
+    width: calc(100% - 2rem);
+  }
+
+  .split-row-e {
+    padding: 6rem 0;
+    gap: 1rem 0;
+  }
+
+  .split-row-e>* {
+    padding: 0;
+  }
+
+  .split-row-e__image,
+  .split-row-e__description {
+    grid-column: span 24;
+  }
+
+  .split-row-e__image img {
+    height: 60vh;
+    width: calc(100% - 2rem);
+  }
+
+  .split-row-e__description p {
+    width: calc(100% - 2rem);
+  }
+
+  .split-row-f__image img {
+    height: 80vh;
+    object-fit: cover;
+  }
+
+  .split-row-g {
+    height: auto;
+    padding: 6rem 0;
+  }
+
+  .split-row-g__description {
+    grid-column: 8 / span 16;
+    align-content: center;
+  }
+
+  .split-row-h {
+    height: auto;
+    justify-items: center;
+    padding-top: 3.5rem;
+  }
+
+  .split-row-h__titlestack {
+    grid-area: 1 / 3 / 2 / 23;
+    order: 1;
+  }
+
+  .split-row-h .heading {
+    font-size: 1.25rem;
+  }
+
+  .split-row-h p {
+    font-size: var(--font-size--s);
+  }
+
+  .split-row-h img {
+    position: relative;
+    grid-area: 2 / 3 / 3 / 23;
+    width: 72vw;
+    order: 2;
+  }
+
+  .split-row-h br {
+    display: none;
+  }
+
+  .u-space-vertical {
+    padding: 6rem 0;
+  }
+
 }
