--- a/src/style.css
+++ b/src/style.css
@@ -12,9 +12,9 @@
   --font-size--md: 1rem;
   --font-size--lg: 1.75rem;
 
-  --black: #000;
-  --gray: #757575;
-  --white: #fff;
+  --color--black: #000;
+  --color--gray: #757575;
+  --color--white: #fff;
 
   --line-height--xs: 1;
   --line-height--sm: 1.25;
@@ -24,7 +24,7 @@
   --font-weight--regular: 400;
   --font-weight--bold: 800;
 
-  color: var(--black);
+  color: var(--color--black);
 
 }
 
@@ -58,7 +58,7 @@ h4 {
 }
 
 .annotation {
-  color: var(--gray);
+  color: var(--color--gray);
   font-size: var(--font-size--xs);
   line-height: var(--line-height--md);
 }
@@ -135,7 +135,7 @@ h4 {
 .split-row-d__title {
   grid-column: span 1;
   order: 3;
-  border-left: solid 1px var(--black);
+  border-left: solid 1px var(--color--black);
   justify-items: center;
 }
 
@@ -225,7 +225,7 @@ h4 {
   flex-direction: column;
   row-gap: .75rem;
   grid-column: 2 / span 22;
-  color: var(--white);
+  color: var(--color--white);
   z-index: 1;
 }
 
@@ -240,7 +240,7 @@ h4 {
 }
 
 .stack>* {
-  background-color: var(--black);
+  background-color: var(--color--black);
   height: 12rem;
   list-style-type: none;
 }
@@ -250,14 +250,14 @@ h4 {
 }
 
 .divider {
-  border-bottom: solid 1px var(--black);
+  border-bottom: solid 1px var(--color--black);
 }
 
 /* Large Screen - - - - - - - - - - - - - - - - - - - - - */
 
 @media (min-width:800px) {
   .split-row-d__description {
-    border-left: solid 1px var(--black);
+    border-left: solid 1px var(--color--black);
   }
 
   .split-row-h img {
@@ -330,7 +330,7 @@ h4 {
 
   .split-row-d__description {
     grid-area: 2 / 1 / 3 / 23;
-    border-top: solid 1px var(--black);
+    border-top: solid 1px var(--color--black);
   }
 
   .split-row-d__description p {
